# Gstreamer-Multisource

./: CMakeLists.txt  README.md  readme_install.md
src/: main.cpp
src/gstreamer_wrapper/: CMakeLists.txt  frame_handler.cpp  wrapper.cpp  wrapper.hpp
src/gstreamer_wrapper_test/: test.cpp
